# R-FORTH

./: CMakeLists.txt  main.c  token.c  token.h
WarmUp_1/: CMakeLists.txt  hello_world.c
WarmUp_10/: CMakeLists.txt  commandline_args.c
WarmUp_2/: CMakeLists.txt  basic_calculator.c  calc.c
WarmUp_3/: CMakeLists.txt  array_operations.c
WarmUp_4/: CMakeLists.txt  string_reversal.c
WarmUp_5/: CMakeLists.txt  matrix_operations.c
WarmUp_6/: CMakeLists.txt  factorial_calc.c
WarmUp_7/: CMakeLists.txt  linear_search.c
WarmUp_8/: CMakeLists.txt  linked_list.c
WarmUp_9/: CMakeLists.txt  file_operations.c
tokens/: CMakeLists.txt  main.c  token.c  token.h
